# ap3R-seauCan

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  README.md  can.sh  flake.nix  pkg.nix  vcan.sh
include/: CanManager.hpp  CanMessage.hpp  NoBitRateManagementException.hpp  slcanInterface.hpp
src/: CanMessage.cpp  main.cpp  slcanInterface.cpp
test/: CMakeLists.txt  CanMessage.cpp  slcanInterface.cpp
